CHANGELOG -- $Id: changelog,v 1.3 2004/06/22 21:57:45 shred Exp $

R2 (2004-06-22)
  * Checked in an obsolete CSVSplitter instead of CSVLine by
    mistake. Sorry!
  * Added a JIntegerField class

R1 (2004-06-21)
  * Initial public release
  * Released under MPL 1.1/GPL 2.0/LGPL 2.1 tri license

# jedit :mode=text:tabSize=2:noTabs=true:
