@@ -1,4 +1,13 @@
-CHANGELOG -- $Id: changelog,v 1.3 2004/06/22 21:57:45 shred Exp $
+CHANGELOG -- $Id: changelog,v 1.6 2004/06/27 15:46:34 shred Exp $
+
+R3 (2004-06-27)
+  * MenuActionProxy now does not scale icon if its size is already
+    correct.
+  * Added methods to the SortableTableModelProxy that allows to map row
+    numbers between the master TableModel and the proxy's representation.
+  * JTable only accepts SortableTableModels now. Automatically wrapping
+    classic TableModels was a conceptual flaw that lead to problems of
+    proper addressing of the correct rows.
 
 R2 (2004-06-22)
   * Checked in an obsolete CSVSplitter instead of CSVLine by
@@ -9,5 +18,5 @@ R1 (2004-06-21)
   * Initial public release
   * Released under MPL 1.1/GPL 2.0/LGPL 2.1 tri license
 
-# jedit :mode=text:tabSize=2:noTabs=true:
+# jedit :mode=text:tabSize=2:noTabs=true:maxLineLen=72:
 
